--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "flowbite": "^1.6.5",
+    "flowbite-vue": "^0.0.10",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
