--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "dev-all": "npm-run-all --parallel server dev",
+    "pull": "git pull --prefix ../api/ ",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "npm run --prefix ../api/ dev"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -15,10 +18,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
+    "cookie-storage": "^6.1.0",
     "fortawesome": "^0.0.1-security",
     "pinia": "^2.0.36",
+    "vee-validate": "^4.9.6",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-validate": "^1.0.1",
+    "vue3-tel-input": "^1.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -30,6 +38,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "flowbite": "^1.6.5",
     "flowbite-vue": "^0.0.10",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
