--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vee-validate/rules": "^4.9.6",
     "axios": "^1.4.0",
     "cookie-storage": "^6.1.0",
     "fortawesome": "^0.0.1-security",
     "pinia": "^2.0.36",
+    "validator": "^13.9.0",
     "vee-validate": "^4.9.6",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
