--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=http://10.10.10.107:3000/
-# VITE_API_URL=http://localhost:3000/
+# VITE_API_URL=http://10.10.10.107:3000/
+VITE_API_URL=http://10.10.10.118:3000/
+RELEASE_PORT=net stop winnat
