--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vee-validate": "^4.9.6",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
+    "vue-spinner": "^1.0.4",
     "vue-validate": "^1.0.1",
     "vue3-tel-input": "^1.0.4",
     "yup": "^1.2.0"
