--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "dev-all": "npm-run-all --parallel server dev",
-    "pull": "git pull --prefix ../api/ ",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "server": "npm run --prefix ../api/ dev"
+    "format": "prettier src/ --write"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -37,8 +34,9 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-vue": "^9.15.1",
     "flowbite": "^1.6.5",
     "flowbite-vue": "^0.0.10",
     "npm-run-all": "^4.1.5",
